@@ -36,6 +36,14 @@
 <div class="document">
 
 
+<p>2011-07-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/pixel_cache.c (AcquireOneCacheViewPixelInlined): Only use
+image colormap if the image storage class is PseudoClass.
+Eliminates a core dump when the image is in CMYK space.</li>
+</ul>
+</blockquote>
 <p>2011-07-20  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;&#46;&#46;">glennrp<span>&#64;</span>simple<span>&#46;</span><span>&#46;</span><span>&#46;</span></a>&gt;</p>
 <blockquote>
 <ul class="simple">
